[PN-16950] fix: sonar issues